// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`tooltip props clickable tooltip 1`] = `
<div>
  <span
    aria-describedby="example-clickable"
    data-tooltip-id="example-clickable"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-top react-tooltip__show"
    id="example-clickable"
    role="tooltip"
    style="left: 5px; top: -10px;"
  >
    <div
      class="react-tooltip-content-wrapper"
    >
      <button>
        button
      </button>
    </div>
    <div
      class="react-tooltip-arrow"
      style="--rt-arrow-size: 8px; left: -1px; bottom: -3px;"
    />
  </div>
</div>
`;

exports[`tooltip props tooltip with delay hide 1`] = `
<div>
  <span
    data-tooltip-id="example-delay-hide"
  >
    Lorem Ipsum
  </span>
</div>
`;

exports[`tooltip props tooltip with delay show 1`] = `
<div>
  <span
    aria-describedby="example-delay-show"
    data-tooltip-id="example-delay-show"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-top react-tooltip__show"
    id="example-delay-show"
    role="tooltip"
    style="left: 5px; top: -10px;"
  >
    <div
      class="react-tooltip-content-wrapper"
    >
      Hello World!
    </div>
    <div
      class="react-tooltip-arrow"
      style="--rt-arrow-size: 8px; left: -1px; bottom: -3px;"
    />
  </div>
</div>
`;

exports[`tooltip props tooltip with disableTooltip return false 1`] = `
<div>
  <span
    aria-describedby="example-disableTooltip-false"
    data-tooltip-id="example-disableTooltip-false"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-top react-tooltip__show"
    id="example-disableTooltip-false"
    role="tooltip"
    style="left: 5px; top: -10px;"
  >
    <div
      class="react-tooltip-content-wrapper"
    >
      Hello World!
    </div>
    <div
      class="react-tooltip-arrow"
      style="--rt-arrow-size: 8px; left: -1px; bottom: -3px;"
    />
  </div>
</div>
`;

exports[`tooltip props tooltip with float 1`] = `
<div>
  <span
    aria-describedby="example-float"
    data-tooltip-id="example-float"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-top react-tooltip__show"
    id="example-float"
    role="tooltip"
    style="left: 5px; top: -10px;"
  >
    <div
      class="react-tooltip-content-wrapper"
    >
      Hello World!
    </div>
    <div
      class="react-tooltip-arrow"
      style="--rt-arrow-size: 8px; left: -1px; bottom: -3px;"
    />
  </div>
</div>
`;

exports[`tooltip props tooltip without element reference 1`] = `
<div>
  <span>
    Lorem Ipsum
  </span>
</div>
`;
